fix: sonarqube errors